--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,14 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo16.png" sizes="16x16" />
-    <link rel="icon" href="%PUBLIC_URL%/logo32.png" sizes="32x32" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <meta name="theme-color" content="#FAC650" />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap" rel="stylesheet" />
     <meta
       name="Unize"
       content="Avec Unize, vous pouvez facilement stocker et gérer toutes vos cartes dans une seule application."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/favicon/icon-192x192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Unize | Votre portefeuille mobile</title>
   </head>
